tests/assignement/to_self.rev
struct Foo {
    fn init() {
        self = 4 // error: invalid assignment target
    }
}
